--- a/workoutplan.ipynb
+++ b/workoutplan.ipynb
@@ -28,10 +28,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "7cvBPYO3sRy4",
-        "outputId": "7f9bdd5a-6ba7-47d7-ab8c-c3d5b944c788",
+        "outputId": "f29f1e00-35bc-4569-ada8-fc7cac08db2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -41,13 +41,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter Gender (Male/Female): Female\n",
-            "Enter Weight (kg): 47\n",
-            "Enter Height (cm): 167\n",
-            "Enter Body Fat Percentage: 2\n",
+            "Enter Gender (Male/Female): Male\n",
+            "Enter Weight (kg): 65\n",
+            "Enter Height (cm): 185\n",
+            "Enter Body Fat Percentage: 7\n",
             "Enter Resting Heart Rate (BPM): 85\n",
-            "Enter Workout Frequency (days per week): 8\n",
-            "✅ Your BMI is: 16.85 (Underweight)\n",
+            "Enter Workout Frequency (days per week): 7\n",
+            "✅ Your BMI is: 18.99 (Normal weight)\n",
             "\n",
             "✅ Recommended Fitness Goal: Muscle Gain\n",
             "✅ Recommended Workout Plan: Strength Training\n"
