--- a/workoutplan.ipynb
+++ b/workoutplan.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4RwFo28CnWRV7m29qpWI+",
+      "authorship_tag": "ABX9TyODdKOR7NzjWHBGamDa67Jq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 10,
       "metadata": {
         "id": "7cvBPYO3sRy4",
-        "outputId": "f29f1e00-35bc-4569-ada8-fc7cac08db2c",
+        "outputId": "2faea574-bb08-48cb-db01-dd3043d3b028",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -41,101 +41,111 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter Gender (Male/Female): Male\n",
-            "Enter Weight (kg): 65\n",
-            "Enter Height (cm): 185\n",
-            "Enter Body Fat Percentage: 7\n",
-            "Enter Resting Heart Rate (BPM): 85\n",
-            "Enter Workout Frequency (days per week): 7\n",
-            "✅ Your BMI is: 18.99 (Normal weight)\n",
             "\n",
-            "✅ Recommended Fitness Goal: Muscle Gain\n",
-            "✅ Recommended Workout Plan: Strength Training\n"
+            "Enter your details for workout recommendation:\n",
+            "Enter your Gender (Male/Female/Other): Female\n",
+            "Enter your Weight (kg): 90\n",
+            "Enter your Height (cm): 161\n",
+            "Enter your Age: 18\n",
+            "Enter your Hip size (inch): 40\n",
+            "Any Medical Condition? (None/Diabetes/Asthma/Hypertension/Heart Disease/PCOD): PCOD\n",
+            "\n",
+            "Recommended Goal: Fitness\n",
+            "Workout Plan: Focus on yoga, low-impact cardio, and moderate strength training (avoid high-intensity).\n"
           ]
         }
       ],
       "source": [
         "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.ensemble import RandomForestClassifier\n",
-        "from sklearn.preprocessing import LabelEncoder\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
         "\n",
-        "# Sample dataset creation\n",
+        "# -------------------------------\n",
+        "# Training Data (Example)\n",
+        "# -------------------------------\n",
         "data = {\n",
-        "    'gender': ['Male', 'Female', 'Male', 'Female', 'Male', 'Female'],\n",
-        "    'bmi': [28, 22, 30, 18, 25, 21],\n",
-        "    'body_fat_percentage': [26, 20, 30, 15, 24, 17],\n",
-        "    'resting_heart_rate': [85, 75, 90, 65, 80, 72],\n",
-        "    'workout_frequency': [2, 4, 1, 5, 3, 4],\n",
-        "    'fitness_goal': ['Weight Loss', 'Strength Building', 'Weight Loss', 'Muscle Gain', 'General Fitness', 'Endurance Improvement']\n",
+        "    'Gender': [0, 1, 0, 1, 2, 0],  # 0=Female, 1=Male, 2=Other\n",
+        "    'Weight': [47, 80, 60, 90, 55, 70],\n",
+        "    'Height': [161, 175, 168, 180, 160, 170],\n",
+        "    'Age': [18, 25, 30, 40, 22, 35],\n",
+        "    'Hip': [32, 36, 34, 38, 33, 37],\n",
+        "    'MedicalCondition': [5, 0, 2, 3, 1, 4]\n",
+        "    # 0=None, 1=Diabetes, 2=Asthma, 3=Hypertension, 4=Heart Disease, 5=PCOD\n",
         "}\n",
+        "\n",
+        "goals = ['Fitness', 'Weight Loss', 'Strength', 'Weight Loss', 'Fitness', 'Strength']\n",
         "\n",
         "df = pd.DataFrame(data)\n",
         "\n",
-        "# Encoding categorical variables\n",
-        "encoders = {}\n",
-        "encoders['gender'] = LabelEncoder()\n",
-        "df['gender'] = encoders['gender'].fit_transform(df['gender'])\n",
-        "encoders['fitness_goal'] = LabelEncoder()\n",
-        "df['fitness_goal'] = encoders['fitness_goal'].fit_transform(df['fitness_goal'])\n",
+        "# Train Decision Tree\n",
+        "model = DecisionTreeClassifier()\n",
+        "model.fit(df, goals)\n",
         "\n",
-        "# Splitting dataset\n",
-        "X = df[['gender', 'bmi', 'body_fat_percentage', 'resting_heart_rate', 'workout_frequency']]\n",
-        "y = df['fitness_goal']\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "# -------------------------------\n",
+        "# User Input Section\n",
+        "# -------------------------------\n",
+        "print(\"\\nEnter your details for workout recommendation:\")\n",
         "\n",
-        "# Training the model\n",
-        "model = RandomForestClassifier()\n",
-        "model.fit(X_train, y_train)\n",
+        "gender_input = input(\"Enter your Gender (Male/Female/Other): \")\n",
+        "if gender_input.lower() == \"female\":\n",
+        "    gender = 0\n",
+        "elif gender_input.lower() == \"male\":\n",
+        "    gender = 1\n",
+        "else:\n",
+        "    gender = 2\n",
         "\n",
-        "# Function to classify BMI category\n",
-        "def bmi_category(bmi):\n",
-        "    if bmi < 18.5:\n",
-        "        return \"Underweight\"\n",
-        "    elif 18.5 <= bmi < 25:\n",
-        "        return \"Normal weight\"\n",
-        "    elif 25 <= bmi < 30:\n",
-        "        return \"Overweight\"\n",
+        "weight = int(input(\"Enter your Weight (kg): \"))\n",
+        "height = int(input(\"Enter your Height (cm): \"))\n",
+        "age = int(input(\"Enter your Age: \"))\n",
+        "hip = int(input(\"Enter your Hip size (inch): \"))\n",
+        "\n",
+        "medical_input = input(\"Any Medical Condition? (None/Diabetes/Asthma/Hypertension/Heart Disease/PCOD): \")\n",
+        "medical_conditions = {\"none\": 0, \"diabetes\": 1, \"asthma\": 2, \"hypertension\": 3, \"heart disease\": 4, \"pcod\": 5}\n",
+        "medical_condition = medical_conditions.get(medical_input.lower(), 0)\n",
+        "\n",
+        "# -------------------------------\n",
+        "# Convert Input to DataFrame (Fix for Warning)\n",
+        "# -------------------------------\n",
+        "user_input = pd.DataFrame([{\n",
+        "    \"Gender\": gender,\n",
+        "    \"Weight\": weight,\n",
+        "    \"Height\": height,\n",
+        "    \"Age\": age,\n",
+        "    \"Hip\": hip,\n",
+        "    \"MedicalCondition\": medical_condition\n",
+        "}])\n",
+        "\n",
+        "# -------------------------------\n",
+        "# Prediction\n",
+        "# -------------------------------\n",
+        "predicted_goal = model.predict(user_input)[0]\n",
+        "\n",
+        "print(\"\\nRecommended Goal:\", predicted_goal)\n",
+        "\n",
+        "# -------------------------------\n",
+        "# Workout Recommendation (Updated for All Conditions)\n",
+        "# -------------------------------\n",
+        "if medical_condition == 0:\n",
+        "    print(\"Workout Plan: General balanced plan with cardio, strength, and flexibility training 4-5 days/week.\")\n",
+        "elif medical_condition == 1:\n",
+        "    print(\"Workout Plan: Low-impact cardio (walking, cycling), strength training, and yoga to manage blood sugar.\")\n",
+        "elif medical_condition == 2:\n",
+        "    print(\"Workout Plan: Light cardio (walking, swimming), breathing exercises, and yoga. Avoid high-intensity workouts.\")\n",
+        "elif medical_condition == 3:\n",
+        "    print(\"Workout Plan: Moderate cardio, yoga, meditation, and light strength training. Avoid heavy lifting.\")\n",
+        "elif medical_condition == 4:\n",
+        "    print(\"Workout Plan: Very light cardio (walking, cycling), supervised resistance training, and flexibility exercises.\")\n",
+        "elif medical_condition == 5:\n",
+        "    print(\"Workout Plan: Focus on yoga, low-impact cardio, and moderate strength training (avoid high-intensity).\")\n",
+        "else:\n",
+        "    # Fallback to ML-based goal if no special medical condition\n",
+        "    if predicted_goal == \"Weight Loss\":\n",
+        "        print(\"Workout Plan: Cardio + HIIT + Strength training 5 days a week.\")\n",
+        "    elif predicted_goal == \"Fitness\":\n",
+        "        print(\"Workout Plan: Balanced workout plan with cardio, yoga, and moderate strength training 4-5 days a week.\")\n",
+        "    elif predicted_goal == \"Strength\":\n",
+        "        print(\"Workout Plan: Heavy strength training with progressive overload 4 days a week.\")\n",
         "    else:\n",
-        "        return \"Obese\"\n",
-        "\n",
-        "# Function to recommend fitness goal and workout\n",
-        "def recommend_fitness_goal_and_workout(gender, weight, height, body_fat, resting_hr, workout_freq):\n",
-        "    bmi = round(weight / (height ** 2), 2)  # BMI Calculation\n",
-        "    print(f\"✅ Your BMI is: {bmi} ({bmi_category(bmi)})\")\n",
-        "\n",
-        "    gender_encoded = encoders['gender'].transform([gender])[0]\n",
-        "    input_data = pd.DataFrame([[gender_encoded, bmi, body_fat, resting_hr, workout_freq]], columns=X.columns)\n",
-        "    goal_pred = model.predict(input_data)\n",
-        "    fitness_goal = encoders['fitness_goal'].inverse_transform(goal_pred)[0]\n",
-        "\n",
-        "    # Define workout based on goal\n",
-        "    workouts = {\n",
-        "        \"Weight Loss\": \"Cardio & HIIT\",\n",
-        "        \"Muscle Gain\": \"Strength Training\",\n",
-        "        \"Endurance Improvement\": \"Running & Cycling\",\n",
-        "        \"Strength Building\": \"Weight Lifting\",\n",
-        "        \"Flexibility & Mobility\": \"Yoga & Stretching\",\n",
-        "        \"General Fitness\": \"Balanced Routine\"\n",
-        "    }\n",
-        "    workout_plan = workouts.get(fitness_goal, \"General Workout Plan\")\n",
-        "\n",
-        "    return fitness_goal, workout_plan\n",
-        "\n",
-        "# User Input\n",
-        "gender = input(\"Enter Gender (Male/Female): \")\n",
-        "weight = float(input(\"Enter Weight (kg): \"))\n",
-        "height_cm = float(input(\"Enter Height (cm): \"))\n",
-        "height = height_cm / 100  # Convert cm to meters\n",
-        "body_fat = float(input(\"Enter Body Fat Percentage: \"))\n",
-        "resting_hr = int(input(\"Enter Resting Heart Rate (BPM): \"))\n",
-        "workout_freq = int(input(\"Enter Workout Frequency (days per week): \"))\n",
-        "\n",
-        "# Get Recommendation\n",
-        "goal, workout = recommend_fitness_goal_and_workout(gender, weight, height, body_fat, resting_hr, workout_freq)\n",
-        "print(f\"\\n✅ Recommended Fitness Goal: {goal}\")\n",
-        "print(f\"✅ Recommended Workout Plan: {workout}\")\n"
+        "        print(\"Workout Plan: General fitness plan with mixed activities.\")\n"
       ]
     }
   ]
