--- a/workoutplan.ipynb
+++ b/workoutplan.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODdKOR7NzjWHBGamDa67Jq",
+      "authorship_tag": "ABX9TyMymhH/+EX90/HULSFE4XqP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {
         "id": "7cvBPYO3sRy4",
-        "outputId": "2faea574-bb08-48cb-db01-dd3043d3b028",
+        "outputId": "107f6e07-eb78-4859-a70e-3174d74e7b49",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -43,15 +43,15 @@
           "text": [
             "\n",
             "Enter your details for workout recommendation:\n",
-            "Enter your Gender (Male/Female/Other): Female\n",
-            "Enter your Weight (kg): 90\n",
-            "Enter your Height (cm): 161\n",
+            "Enter your Gender (Male/Female/Other): male\n",
+            "Enter your Weight (kg): 68\n",
+            "Enter your Height (cm): 182.88\n",
             "Enter your Age: 18\n",
-            "Enter your Hip size (inch): 40\n",
-            "Any Medical Condition? (None/Diabetes/Asthma/Hypertension/Heart Disease/PCOD): PCOD\n",
+            "Enter your Hip size (inch): 35\n",
+            "Any Medical Condition? (None/Diabetes/Asthma/Hypertension/Heart Disease/PCOD): none\n",
             "\n",
-            "Recommended Goal: Fitness\n",
-            "Workout Plan: Focus on yoga, low-impact cardio, and moderate strength training (avoid high-intensity).\n"
+            "Recommended Goal: Strength\n",
+            "Workout Plan: General balanced plan with cardio, strength, and flexibility training 4-5 days/week.\n"
           ]
         }
       ],
@@ -93,10 +93,10 @@
         "else:\n",
         "    gender = 2\n",
         "\n",
-        "weight = int(input(\"Enter your Weight (kg): \"))\n",
-        "height = int(input(\"Enter your Height (cm): \"))\n",
-        "age = int(input(\"Enter your Age: \"))\n",
-        "hip = int(input(\"Enter your Hip size (inch): \"))\n",
+        "weight = float(input(\"Enter your Weight (kg): \"))\n",
+        "height = float(input(\"Enter your Height (cm): \"))\n",
+        "age = float(input(\"Enter your Age: \"))\n",
+        "hip = float(input(\"Enter your Hip size (inch): \"))\n",
         "\n",
         "medical_input = input(\"Any Medical Condition? (None/Diabetes/Asthma/Hypertension/Heart Disease/PCOD): \")\n",
         "medical_conditions = {\"none\": 0, \"diabetes\": 1, \"asthma\": 2, \"hypertension\": 3, \"heart disease\": 4, \"pcod\": 5}\n",
