--- a/workoutplan.ipynb
+++ b/workoutplan.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMymhH/+EX90/HULSFE4XqP",
+      "authorship_tag": "ABX9TyPt7pfHSLTUhs+tPrtIhg/8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 16,
       "metadata": {
         "id": "7cvBPYO3sRy4",
-        "outputId": "107f6e07-eb78-4859-a70e-3174d74e7b49",
+        "outputId": "c2b4ce3c-13dc-4d43-a15a-38763e66323d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -43,15 +43,15 @@
           "text": [
             "\n",
             "Enter your details for workout recommendation:\n",
-            "Enter your Gender (Male/Female/Other): male\n",
-            "Enter your Weight (kg): 68\n",
-            "Enter your Height (cm): 182.88\n",
+            "Enter your Gender (Male/Female/Other): Female\n",
+            "Enter your Weight (kg): 47\n",
+            "Enter your Height (cm): 161\n",
             "Enter your Age: 18\n",
-            "Enter your Hip size (inch): 35\n",
+            "Enter your Hip size (inch): 32\n",
             "Any Medical Condition? (None/Diabetes/Asthma/Hypertension/Heart Disease/PCOD): none\n",
             "\n",
-            "Recommended Goal: Strength\n",
-            "Workout Plan: General balanced plan with cardio, strength, and flexibility training 4-5 days/week.\n"
+            "Recommended Goal: Fitness\n",
+            "Workout Plan: Balanced workout plan with cardio, yoga, and moderate strength training 4-5 days a week.\n"
           ]
         }
       ],
@@ -124,9 +124,8 @@
         "# -------------------------------\n",
         "# Workout Recommendation (Updated for All Conditions)\n",
         "# -------------------------------\n",
-        "if medical_condition == 0:\n",
-        "    print(\"Workout Plan: General balanced plan with cardio, strength, and flexibility training 4-5 days/week.\")\n",
-        "elif medical_condition == 1:\n",
+        "\n",
+        "if medical_condition == 1:\n",
         "    print(\"Workout Plan: Low-impact cardio (walking, cycling), strength training, and yoga to manage blood sugar.\")\n",
         "elif medical_condition == 2:\n",
         "    print(\"Workout Plan: Light cardio (walking, swimming), breathing exercises, and yoga. Avoid high-intensity workouts.\")\n",
